k8s/infra/postgresql.yaml
# Headless Service for Stable DNS (postgres-0.postgres.database...)
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: database
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: postgres
---
# Read-Write Service (Master Only)
apiVersion: v1
kind: Service
metadata:
  name: postgres-rw
  namespace: database
  labels:
    app: postgres
    role: master
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    statefulset.kubernetes.io/pod-name: postgres-0
---
# Read-Only Service (All Pods)
apiVersion: v1
kind: Service
metadata:
  name: postgres-ro
  namespace: database
  labels:
    app: postgres
    role: replica
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: database
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: "postgres"
  replicas: 3
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        # Mount the init script to the special entrypoint folder
        # This will run automatically on Master (Pod 0) ONLY IF data dir is empty
        - name: config
          mountPath: /docker-entrypoint-initdb.d/00-create-replicator.sh
          subPath: 00-create-replicator.sh
      volumes:
      - name: config
        configMap:
          name: postgres-config
          defaultMode: 0755
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
