k8s/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-tracker-ingress
  namespace: app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - caedes.duckdns.org
    secretName: caedes-duckdns-tls
  rules:
  - host: caedes.duckdns.org
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /library
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: dashboard-service
            port:
              number: 80
      - path: /profile
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /friends
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /u
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /media
        pathType: Prefix
        backend:
          service:
            name: media-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: media-service
            port:
              number: 80
